editor-components/pricing-table/pricing-table5/pricing-table5.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

@keyframes bounceText {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(-5px);
  }

  100% {
    transform: translateY(0);
  }
}

@keyframes breathe {
  0% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.05);
  }

  100% {
    transform: scale(1);
  }
}

.container {
  .max-content {
    .content {
      display: flex;
      gap:  var(--composer-gap-xl);
      width: 100%;

      .left-content {
        width: 50%;
        display: flex;
        flex-direction: column;

        &.left-content-single {
          width: 100%;
          gap: var(--composer-gap-md);
        }

        .title,
        .description {
          text-align: left;
        }

        .subtitle {
          margin-left: 0;
          margin-right: auto;
          text-align: left;
        }

        .description {
          color: var(--composer-font-color-primary);
        }

        .buttons {
          display: flex;
          flex-wrap: wrap;
          place-self: flex-start;
          gap: var(--composer-gap-sm);

          .button-text,
          .button-icon {
            content: "";
          }

          .button-icon {
            font-size: 1.5rem !important;
            height: calc(var(--composer-gap-md) + var(--composer-gap-xs));
            width: calc(var(--composer-gap-md) + var(--composer-gap-xs));
            display: flex;
            align-items: center;
            justify-content: center;
          }
        }
      }

      .right-content {
        width: 50%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        gap: var(--composer-gap-md);

        &.right-content-single {
          width: 100%;
        }

        .plan {
          width: 100%;
          background: color-mix(in srgb,
              var(--composer-html-background),
              var(--composer-font-color-primary) 5%);
          padding: var(--composer-gap-md);
          border-radius: var(--composer-border-radius-md);
          display: flex;
          flex-direction: column;
          justify-content: center;
          transition: all 0.5s ease;
          box-shadow: var(--box-shadow-active);
          color: var(--composer-font-color-primary);
          cursor: pointer;
          position: relative;
          overflow: hidden;

          &::before {
            content: "";
            position: absolute;
            bottom: 0;
            left: 0;
            width: 0;
            height: 1px;
            background: var(--composer-primary-color);
            transition: width 0.8s ease-in-out;
          }

          &.animation1:hover {
            &::before {
              width: 100%;
            }
          }

          &.animation2:hover {
            .plan-price-box {
              .labels {
                animation: bounceText 0.8s ease-in-out infinite;
              }

              .plan-button {
                content: "";
              }
            }
          }

          &.animation3:hover {
            .plan-price-box {
              .labels {
                animation-name: breathe;
                animation-duration: 1s;
                animation-timing-function: ease-in-out;
                animation-iteration-count: infinite;
                animation-direction: alternate;
              }
            }
          }

          &.active {
            background: var(--composer-primary-color);
            justify-content: flex-start;
            gap: var(--composer-gap-md);
            padding: var(--composer-gap-lg);

            .plan-price-box,
            .plan-description {
              max-height: 250px;
              overflow: auto;
              opacity: 1;
            }

            .plan-description,
            .price-description {
              color: var(--composer-font-color-secondary);
              text-align: left;
            }

            .plan-title,
            .price {
              color: var(--composer-font-color-secondary);
              transition: color 0.5s ease;
            }

            .plan-upper {
              margin: 0;

              .icon-box,
              .icon-box-active {
                content: "";
              }
            }
          }

          .plan-upper {
            display: flex;
            justify-content: space-between;
            width: 100%;
            align-items: center;
            margin: 0 !important;

            .plan-title {
              margin: 0;
              text-align: left;
              transition: color 0.5s ease;
            }

            .icon-box,
            .icon-box-active {
              color: var(--composer-font-color-primary);
              background-color: var(--composer-html-background);
              border-radius: var(--composer-border-radius-xl);
              width: 30px;
              height: 30px;
              display: flex;
              justify-content: center;
              align-items: center;
              flex-shrink: 0;

              .icon {
                font-size: 1.25rem !important;
                display: flex;
                justify-content: center;
                align-items: center;
              }
            }

            .icon-box-active {
              background-color: var(--composer-font-color-primary);
              color: var(--composer-html-background);
            }
          }

          .plan-price-box,
          .plan-description {
            max-height: 0;
            overflow: hidden;
            opacity: 0;
            transition: all 0.5s ease, opacity 0.2s ease;
            margin: 0;
          }

          .plan:not(.active) .plan-price-box {
            opacity: 0;
            pointer-events: none;
          }

          .plan.active .plan-price-box {
            opacity: 1;
          }

          .plan-upper {
            gap: var(--composer-gap-sm);
          }

          .plan-price-box {
            display: flex;
            width: 100%;
            align-items: center;
            justify-content: space-between;
            flex-wrap: wrap;

            .labels {
              display: flex;
              align-items: center;
              gap: var(--composer-gap-sm);
              transition: all 0.5s ease;
              transform: scale(1);

              .price {
                font-size: 2rem;
              }
            }

            .plan-buttons {
              display: flex;
              flex-direction: column;
              align-items: flex-end;
              gap: var(--composer-gap-sm);

              .plan-button {

                .button-text,
                .button-icon {
                  content: "";
                }

                .button-icon {
                  display: flex;
                  align-items: center;
                  justify-content: center;
                  width: calc(var(--composer-gap-md) + var(--composer-gap-xs));
                  height: calc(var(--composer-gap-md) + var(--composer-gap-xs));
                }
              }
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .content {
        .right-content {

          .plan {
            .plan-upper {

              .icon-box,
              .icon-box-active {
                width: calc(var(--composer-gap-md) + var(--composer-gap-xs));
                height: calc(var(--composer-gap-md) + var(--composer-gap-xs));

                .icon {
                  font-size: 1.25rem !important;
                }
              }
            }

            .plan-price-box {
              .labels {
                .price-description {
                  min-width: 100%;
                }
              }
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    position: relative;
    justify-content: space-between;

    .max-content {
      .content {
        flex-direction: column;
        gap: var(--composer-gap-md);
        align-items: center;

        .left-content {
          width: 100%;

          .subtitle {
            margin-left: auto;
            margin-right: auto;
            text-align: center;
            transform: none !important;

            &::before {
              display: none !important;
            }
          }

          .title {
            text-align: center;
          }

          .description {
            text-align: center;
          }

          .buttons {
            width: 100%;
            justify-content: center;
          }
        }

        .right-content {
          width: 100%;

          .plan {
            .plan-upper {

              .icon-box,
              .icon-box-active {
                width: calc(var(--composer-gap-md) + var(--composer-gap-xs));
                height: calc(var(--composer-gap-md) + var(--composer-gap-xs));

                .icon {
                  font-size: 1.25rem !important;
                }
              }
            }

            .plan-price-box {
              display: flex;

              .labels {
                .price {
                  font-size: 1.25rem;
                }

                .price-description {
                  min-width: 100%;
                }
              }
            }
          }
        }
      }
    }
  }
}

